@@ -12,6 +12,7 @@
 
 ngIRCd CVSHEAD
 
+  - Implementec numeric "333": Time and user name who set a channel topic.
   - Fixed server NOTICEs to users with "s" mode ("server messages").
   - Enhanced the handler for PING and PONG commands: fix forwarding and enable
     back-passing of a client supplied additional argument of PING.
@@ -637,4 +638,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.291 2005/08/29 10:58:00 alex Exp $
+$Id: ChangeLog,v 1.292 2005/09/02 12:50:25 alex Exp $
